Fixed team pic alignment

--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -200,7 +200,7 @@
 //Events Component -----------------------------------------------------------------------
 
 .Events-container {
-  background: #ff6249;
+  background: $orange-color;
   padding: 30px 0;
 
   h1 {
@@ -631,6 +631,9 @@
         width: 150px;
         .Member-pic {
           width: 150px;
+          .Image-border {
+            top: 40%;
+          }
         }
       }
     }
